update website, add auto scroll

--- a/browser/js/common/directives/information-directive/information-directive.template.html
+++ b/browser/js/common/directives/information-directive/information-directive.template.html
@@ -2,13 +2,13 @@
 	<div class="row">
 		<div class="col-md-12">
 			<h1 class="section-header" style="margin: 60px 0px 40px 0px;">CONTACT US</h1>
-			<p class="text-center" style="font-size: 22px; margin-bottom:0px;"><b>Website:</b>&nbsp;&nbsp;&nbsp;www.eBusing.com</p>
-			<p class="text-center" style="font-size: 22px;"><b>Email us at:</b>&nbsp;&nbsp;&nbsp;BBWHSE @aol.com</p>
+			<p class="text-center" style="font-size: 22px; margin-bottom:0px;"><b>Website:</b><span class="roboto">&nbsp;&nbsp;&nbsp;www.eBusing.com</span></p>
+			<p class="text-center" style="font-size: 22px;"><b>Email us at:</b><span class="roboto">&nbsp;&nbsp;&nbsp;BBWHSE@aol.com</span></p>
 		</div>
 	</div>
 
 	<div class="row card-row">
-		<div class="col-md-4 offset-md-2">
+		<div class="col-lg-4 offset-lg-2 col-md-6">
 			<div class="card" style="">
 				<div class="card-body">
 					<h5 class="card-title bold">OFFICE</h5>
@@ -19,7 +19,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-md-4">
+		<div class="col-lg-4 col-md-6">
 			<div class="card" style="">
 				<div class="card-body">
 					<h5 class="card-title bold">WAREHOUSE</h5>
