--- a/browser/js/common/directives/products-directive/products-directive.template.html
+++ b/browser/js/common/directives/products-directive/products-directive.template.html
@@ -1,13 +1,13 @@
 <div class="container" id="products-directive">
-	<div class="row" style="margin: 30px 0px 50px 0px;">
+	<div class="row" style="margin: 30px 0px 20px 0px;">
 		<div class="col-md-10 offset-md-1">
 			<h3 class="section-header bold" style="margin-bottom: 20px;">PRODUCTS</h3>
-			<p class="text-center" style="font-size: 18px;">Ball Bushing Warehouse is pleased to offer the broadest stock available. In addition to inch and metric ball bushings, we also provide a standard line of inch and metric hardened steel sleeve bushings.</p>
+			<p class="text-center roboto" style="font-size: 18px;">Ball Bushing Warehouse is pleased to offer the broadest stock available. In addition to inch and metric ball bushings, we also provide a standard line of inch and metric hardened steel sleeve bushings.</p>
 		</div>
 	</div>
 	
 	<div class="row card-row">
-		<div class="col-md-4 offset-md-2">
+		<div class="col-md-6 col-lg-4 offset-lg-2">
 			<div class="card" style="">
 				<div class="card-body">
 					<h5 class="card-title">INCH SERIES RADIAL BUSHINGS</h5>
@@ -20,7 +20,7 @@
 				</ul>
 			</div>
 		</div>
-		<div class="col-md-4">
+		<div class="col-md-6 col-lg-4">
 			<div class="card" style="">
 				<div class="card-body">
 					<h5 class="card-title">METRIC SERIES RADIAL BUSHINGS</h5>
