--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -7,6 +7,15 @@
 		</div>
 	</div>
 
-	<informationdirective></informationdirective>
+	<aboutusdirective></aboutusdirective>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 text-center">
+				<button ng-click="goToState('products')" class="btn btn-primary cta-btn" type="button">View Products</button>
+				<button ng-click="goToState('contact')" class="btn btn-primary cta-btn" type="button">Contact Us</button>
+			</div>
+		</div>
+	</div>
 	
 </section>
