create product pages

--- a/browser/js/common/directives/information-directive/information-directive.template.html
+++ b/browser/js/common/directives/information-directive/information-directive.template.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<h1 class="section-header" style="margin: 60px 0px 40px 0px;">CONTACT US</h1>
-			<p class="text-center" style="font-size: 22px; margin-bottom:0px;"><b>Website:</b><span class="roboto">&nbsp;&nbsp;&nbsp;www.eBusing.com</span></p>
+			<p class="text-center" style="font-size: 22px; margin-bottom:0px;"><b>Website:</b><span class="roboto">&nbsp;&nbsp;&nbsp;www.eBushing.com</span></p>
 			<p class="text-center" style="font-size: 22px;"><b>Email us at:</b><span class="roboto">&nbsp;&nbsp;&nbsp;BBWHSE@aol.com</span></p>
 		</div>
 	</div>
