--- a/browser/js/common/directives/products-directive/products-directive.template.html
+++ b/browser/js/common/directives/products-directive/products-directive.template.html
@@ -13,10 +13,22 @@
 					<h5 class="card-title">INCH SERIES RADIAL BUSHINGS</h5>
 				</div>
 				<ul class="list-group list-group-flush">
-					<a class="list-group-item">&#8226;&nbsp;Standard Radial Bushings</a>
-					<a class="list-group-item">&#8226;&nbsp;High Misalignment Capability Radial Bushings</a>
-					<a class="list-group-item">&#8226;&nbsp;Extended Inner Ring Radial Bushings</a>
-					<a class="list-group-item">&#8226;&nbsp;Maintenance Free Radial Bushings</a>
+					<a class="list-group-item"
+						ui-sref="product({productIdentifier: 'srb1'})">
+						&#8226;&nbsp;Standard Radial Bushings
+					</a>
+					<a class="list-group-item"
+						ui-sref="product({productIdentifier: 'hmcrb'})">
+						&#8226;&nbsp;High Misalignment Capability Radial Bushings
+					</a>
+					<a class="list-group-item"
+						ui-sref="product({productIdentifier: 'eirrb'})">
+						&#8226;&nbsp;Extended Inner Ring Radial Bushings
+					</a>
+					<a class="list-group-item"
+						ui-sref="product({productIdentifier: 'mfrb'})">
+						&#8226;&nbsp;Maintenance Free Radial Bushings
+					</a>
 				</ul>
 			</div>
 		</div>
@@ -26,11 +38,26 @@
 					<h5 class="card-title">METRIC SERIES RADIAL BUSHINGS</h5>
 				</div>
 				<ul class="list-group list-group-flush">
-					<a class="list-group-item">&#8226;&nbsp;Standard Radial Bushings</a>
-					<a class="list-group-item">&#8226;&nbsp;High Misalignment Capability Radial Bushings</a>
-					<a class="list-group-item">&#8226;&nbsp;Extended Inner Ring Radial Bushings</a>
-					<a class="list-group-item">&#8226;&nbsp;Extended Inner Ring GEEW Series</a>
-					<a class="list-group-item">&#8226;&nbsp;Maintenance Free Radial Bushings</a>
+					<a class="list-group-item"
+						ui-sref="product({productIdentifier: 'srb2'})">
+						&#8226;&nbsp;Standard Radial Bushings
+					</a>
+					<a class="list-group-item"
+						ui-sref="product({productIdentifier: 'hmcrb2'})">
+						&#8226;&nbsp;High Misalignment Capability Radial Bushings
+					</a>
+					<a class="list-group-item"
+						ui-sref="product({productIdentifier: 'eirrb2'})">
+						&#8226;&nbsp;Extended Inner Ring Radial Bushings
+					</a>
+					<a class="list-group-item"
+						ui-sref="product({productIdentifier: 'eirgs'})">
+						&#8226;&nbsp;Extended Inner Ring GEEW Series
+					</a>
+					<a class="list-group-item"
+						ui-sref="product({productIdentifier: 'mfrb2'})">
+						&#8226;&nbsp;Maintenance Free Radial Bushings
+					</a>
 				</ul>
 			</div>
 		</div>
@@ -43,8 +70,14 @@
 					<h5 class="card-title">STEEL SLEEVE BUSHINGS</h5>
 				</div>
 				<ul class="list-group list-group-flush">
-					<a class="list-group-item">&#8226;&nbsp;Metric Steel Sleeve Bushings</a>
-					<a class="list-group-item">&#8226;&nbsp;Inch Steel Sleeve Bushings</a>
+					<a class="list-group-item"
+						ui-sref="product({productIdentifier: 'mssb'})">
+						&#8226;&nbsp;Metric Steel Sleeve Bushings
+					</a>
+					<a class="list-group-item"
+						ui-sref="product({productIdentifier: 'issb'})">
+						&#8226;&nbsp;Inch Steel Sleeve Bushings
+					</a>
 				</ul>
 			</div>
 		</div>
@@ -54,8 +87,14 @@
 					<h5 class="card-title">ALSO AVAILABLE</h5>
 				</div>
 				<ul class="list-group list-group-flush">
-					<a class="list-group-item">&#8226;&nbsp;Inch Series Angular Contact Bushings</a>
-					<a class="list-group-item">&#8226;&nbsp;Metric Series Angular Contact Bushings</a>
+					<a class="list-group-item"
+						ui-sref="product({productIdentifier: 'isac'})">
+						&#8226;&nbsp;Inch Series Angular Contact Bushings
+					</a>
+					<a class="list-group-item"
+						ui-sref="product({productIdentifier: 'sac'})">
+						&#8226;&nbsp;Metric Series Angular Contact Bushings
+					</a>
 				</ul>
 			</div>
 		</div>
