commit before heroku

--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -5,7 +5,7 @@
     <span class="navbar-brand d-flex flex-fill bold">
         <a ui-sref="home">
             <!-- NTP1 Explorer -->
-            <img id="logo" src="/assets/logo1.png">
+            <img id="logo" src="/assets/logoNoShadow2.png">
         </a>
     </span>
     <div class="navbar-collapse collapse" id="navbar">
