--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,7 +1,7 @@
 <section id="home">
 	<div class="jumbotron jumbotron-fluid">
 		<div class="container text-center">
-			<img style="max-width: 100%;margin-top: 45px;" src="assets/logo1.png">
+			<img id="home-img" style="margin-top: 45px;" src="assets/logoWithShadow2.png">
 			<!-- <h1 class="display-4">Fluid jumbotron</h1> -->
 			<p class="lead">THE RIGHT BUSHING - THE RIGHT PRICE</p>
 		</div>
