update favicon, UI

--- a/browser/js/common/directives/products-directive/products-directive.template.html
+++ b/browser/js/common/directives/products-directive/products-directive.template.html
@@ -64,7 +64,7 @@
 	</div>
 
 	<div class="row card-row">
-		<div class="col-md-4 offset-md-2">
+		<div class="col-md-6 col-lg-4 offset-lg-2">
 			<div class="card" style="">
 				<div class="card-body">
 					<h5 class="card-title">STEEL SLEEVE BUSHINGS</h5>
@@ -81,7 +81,7 @@
 				</ul>
 			</div>
 		</div>
-		<div class="col-md-4">
+		<div class="col-md-6 col-lg-4">
 			<div class="card" style="">
 				<div class="card-body">
 					<h5 class="card-title">ALSO AVAILABLE</h5>
